# EyeLight

./: Cargo.toml  Dockerfile
.devcontainer/: devcontainer.json
src/: config.rs  main.rs
src/api/: handlers.rs  routes.rs
src/db/: database.rs  mod.rs  models.rs  repository.rs
src/models/: models.rs  rekognitionModel.rs
src/services/: analysis.rs  mock_analysis.rs
src/utils/: errors.rs  validation.rs
