[package]
name = "eyelight"
version = "1.75.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
dotenv = "0.15"
http = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "postgres"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
